--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,4 +27,4 @@ services:
       - "50053:50053"
     volumes:
       - .:/app
-    command: ["tail", "-f", "/dev/null"]
+    command: ["python", "chat_service/server.py"]
